--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev ",
-    "build": "prisma generate && next build --turbopack",
+    "build": "npx prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@prisma/client": "^6.14.0",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "@eslint/eslintrc": "^3"
+    "prisma": "^6.14.0",
+    "tailwindcss": "^4"
   }
 }
